src/test/deca/context/invalid/Objet/assign_Methods.des
we can't assign a value to a method